# practical_ws

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/husky_control/: .catkin  .rosinstall  local_setup.sh
devel/.private/husky_controller/: .catkin  .rosinstall  setup.sh
devel/lib/husky_controller/: circle_driver
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  husky_controller.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/husky_controller/cmake/: husky_controllerConfig-version.cmake  husky_controllerConfig.cmake
logs/husky_control/: build.check.000.log.stderr  build.cmake.000.log.stderr
logs/husky_controller/: build.symlink.003.log.stderr
src/autonomous_nav/: CMakeLists.txt  README.md  package.xml
src/autonomous_nav/launch/: auto_nav_cpp.launch  auto_nav_py.launch  sim_control.launch  task_two_cpp.launch  task_two_py.launch
src/autonomous_nav/resources/: coordinates.csv
src/autonomous_nav/src/: coord_nav.h  coord_nav.py  nav_func.cpp  nav_util.cpp  nav_util.h  traverse_goals.cpp  traverse_goals.py
src/autonomous_nav/src/coord_nav/: CMakeLists.txt  package.xml
src/autonomous_nav/src/coord_nav/src/: coordinate_send.py  coordinates.csv  traverse_goals.cpp
src/husky/husky_gazebo/launch/: husky_empty_world.launch
src/simulation_control/: CMakeLists.txt  README.md  package.xml
src/simulation_control/launch/: daemon_cpp.launch  daemon_py.launch  sim_control.launch  sim_control_cpp.launch  task_one_cpp.launch  task_one_py.launch
src/simulation_control/src/: circle_driver.cpp  circle_driver.py
src/timed_roslaunch/launch/: timed_task_one.launch  timed_task_two.launch
(+7 files in other folders)
