<?xml version="1.0"?>
<package>
  <name>autonomous_nav</name>
  <version>0.0.1</version>
  <description>Using csv to navigate husky to goals</description>

  <maintainer email="damianhancock09@gmail.com">Damian Hancock</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
